# GrapeWine

./: .gitignore  README.md  install.sh
core/: Cargo.toml  build.rs
core/src/: main.rs
core/src/orchestrator/: downloader.rs  installer.rs  mod.rs
core/src/parser/: mod.rs
core/src/plugins/: mod.rs
core/src/tui/: mod.rs
docs/: plugins.md
helper-windows/: build.zig
helper-windows/src/: main.zig
parser/: build.zig
parser/src/: parser.zig
plugins/: custom_db.lua  epic.lua  gog.lua  jackett.lua  steam.lua  torrent.lua
